--- a/game-server-study/game-server-study.vcxproj
+++ b/game-server-study/game-server-study.vcxproj
@@ -19,7 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="10_원자조작.cpp" />
+    <ClCompile Include="10_조건변수주의사항.cpp" />
+    <ClCompile Include="11_원자조작.cpp" />
+    <ClCompile Include="12_멀티쓰레드 흔한 실수들.cpp" />
     <ClCompile Include="1_호출스택.cpp" />
     <ClCompile Include="2_쓰레드의효율성.cpp" />
     <ClCompile Include="3_교착상태.cpp" />
