--- a/game-server-study/game-server-study.vcxproj
+++ b/game-server-study/game-server-study.vcxproj
@@ -28,16 +28,22 @@
     <ClCompile Include="2_클라이언트만들기.cpp" />
     <ClCompile Include="3_IOCP 커널객체 생성과 소켓연결.cpp" />
     <ClCompile Include="3_교착상태.cpp" />
+    <ClCompile Include="4_OverlappedIO이벤트기반통보_서버.cpp" />
     <ClCompile Include="4_잠금순서의 규칙.cpp" />
+    <ClCompile Include="5_OverlappedIO이벤트기반통보_클라.cpp" />
     <ClCompile Include="5_병목현상 구현.cpp" />
     <ClCompile Include="6_이벤트.cpp" />
     <ClCompile Include="7_조건변수 사용하기.cpp" />
     <ClCompile Include="8_세마포어.cpp" />
     <ClCompile Include="9_세마포어 구현.cpp" />
     <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="6_OverlappedIO_Callback기반통보_서버.h" />
     <ClInclude Include="Clock.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
