--- a/game-server-study/game-server-study.vcxproj.filters
+++ b/game-server-study/game-server-study.vcxproj.filters
@@ -61,9 +61,27 @@
     <ClCompile Include="3_IOCP 커널객체 생성과 소켓연결.cpp">
       <Filter>소스 파일\서버와클라이언트</Filter>
     </ClCompile>
+    <ClCompile Include="4_OverlappedIO이벤트기반통보_서버.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="5_OverlappedIO이벤트기반통보_클라.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Clock.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="6_OverlappedIO_Callback기반통보_서버.h">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClInclude>
+    <ClInclude Include="Util.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
