--- a/game-server-study/game-server-study.vcxproj.filters
+++ b/game-server-study/game-server-study.vcxproj.filters
@@ -52,37 +52,52 @@
     <ClCompile Include="12_멀티쓰레드 흔한 실수들.cpp">
       <Filter>소스 파일\멀티쓰레딩</Filter>
     </ClCompile>
-    <ClCompile Include="1_서버만들기.cpp">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClCompile>
-    <ClCompile Include="2_클라이언트만들기.cpp">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClCompile>
-    <ClCompile Include="3_IOCP 커널객체 생성과 소켓연결.cpp">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClCompile>
-    <ClCompile Include="4_OverlappedIO이벤트기반통보_서버.cpp">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClCompile>
-    <ClCompile Include="5_OverlappedIO이벤트기반통보_클라.cpp">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Util.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Socket.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="_6_OverlappedIO_Callback기반통보_서버.h">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="_5_OverlappedIO이벤트기반통보_클라.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="_4_OverlappedIO이벤트기반통보_서버.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="_3_IOCP 커널객체 생성과 소켓연결.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="_2_클라이언트만들기.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
+    <ClCompile Include="_1_서버만들기.cpp">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Clock.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="6_OverlappedIO_Callback기반통보_서버.h">
-      <Filter>소스 파일\서버와클라이언트</Filter>
-    </ClInclude>
     <ClInclude Include="Util.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Socket.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="common_header.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="_7_OverlappedIO_CallBack기반통보_클라.h">
+      <Filter>소스 파일\서버와클라이언트</Filter>
+    </ClInclude>
+    <ClInclude Include="_8_OverlappedIO_CallBack기반통보_에코서버.h">
+      <Filter>소스 파일\서버와클라이언트</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
