--- a/game-server-study/game-server-study.vcxproj
+++ b/game-server-study/game-server-study.vcxproj
@@ -51,6 +51,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="_11_IOCP_채팅서버.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="_7_OverlappedIO_CallBack기반통보_클라.h">
       <SubType>
       </SubType>
